--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -233,9 +233,6 @@ h2.sectionTitle .icon {
 #gridContainer {
   background-color: #fff;
   flex: 1 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   width: 100%;
 }
 
@@ -313,31 +310,53 @@ h2.sectionTitle .icon {
   }
 }
 
-@media
+@media /* Tablets portrait */
+  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px) {
+  #introGrid {
+    position: relative;
+    margin-bottom: 10px;
+  }
+  #introGrid .speedControls {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #f1f2f7;
+    z-index: 2;
+  }
+}
   screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
   screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
   screen and (min-width: 1024px) { /* Tablets and desktop */
+@media /* Tablets and desktop */
+  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
+  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
+  screen and (min-width: 1024px) {
   #taskContent {
     flex-direction: column;
   }
   #introGrid {
-    flex-direction: row;
   }
   #taskIntro {
-    flex: 1 1 50%;
+    flex: 1 0 50%;
     background-color: #fff;
     z-index: 2;
   }
   #gridContainer {
-    flex: 1 1 50%;
+    flex: 1 0 50%;
+    min-width: 0;
   }
 }
+
 
 /*****************
   TASK GRID & TESTS
 *****************/
 #grid {
-  overflow: auto;
+  overflow-x: auto;
   max-width: 100%;
   padding: 2em 0px;
 }
@@ -573,6 +592,47 @@ h2.sectionTitle .icon {
   background: rgba(0,0,0,0.3);
 }
 
+@media /* Tablets and desktop */
+  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
+  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
+  screen and (min-width: 1024px) {
+  #introGrid #playerControls,
+  #introGrid #speedSlider {
+    display: inline-flex;
+    background-color: transparent;
+    border-radius: 0;
+    box-shadow: none;
+    width: auto;
+    margin: 0;
+  }
+  #introGrid #playerControls .icon {
+    margin-right: 5px;
+  }
+  #introGrid #playerControls .icon span {
+    padding: 0;
+    border-radius: 50%;
+    line-height: 30px;
+    width: 30px;
+    text-align: center;
+  }
+  #introGrid #playerControls .icon:not(.playPause) span {
+    color: #fff;
+    background-color: #4a90e2;
+    font-size: 14px;
+  }
+  #introGrid #playerControls .icon.playPause span {
+    color: #4a90e2;
+    background-color: #fff;
+    font-size: 30px;
+  }
+  #introGrid #speedSlider {
+    background-color: rgba(0,0,0,0.10);
+    box-shadow: 1px 1px 0 0 rgba(0,0,0,0.10) inset ;
+    border-radius: 5px;
+    font-size: 18px;
+    color: #4a4a4a;
+  }
+}
 
 /*****************
   CODE EDITOR
@@ -732,6 +792,11 @@ h2.sectionTitle .icon {
 /*****************
   TASK TOOLBAR
 *****************/
+#taskToolbar {
+  flex: 0 0 auto;
+  z-index: 1;
+  position: relative;
+}
 @media
   screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
   screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
@@ -741,12 +806,9 @@ h2.sectionTitle .icon {
   #taskToolbar {
     visibility: hidden;
     height: 0;
+    flex: 0 0 0;
+    position: static;
   }
-}
-#taskToolbar {
-  flex: 0 0 auto;
-  z-index: 1;
-  position: relative;
 }
 #taskToolbar::after {
   content: " ";
