--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -215,6 +215,7 @@ h2.sectionTitle .icon {
   flex-direction: column;
   justify-content: stretch;
   height: calc(100vh - 40px);
+  width: 100vw;
 }
 #taskContent {
   flex: 2 0 0;
@@ -314,6 +315,10 @@ h2.sectionTitle .icon {
 
 @media /* Tablets portrait */
   screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px) {
+
+  #taskContent {
+    flex-direction: column;
+  }
   #introGrid {
     position: relative;
     margin-bottom: 10px;
@@ -330,21 +335,6 @@ h2.sectionTitle .icon {
     background-color: #f1f2f7;
     box-shadow: 0 1px 0 0px #ccc inset;
   }
-}
-@media /* Tablets landscape and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
-}
-@media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
-  #taskContent {
-    flex-direction: column;
-  }
-  #introGrid {
-  }
   #taskIntro {
     flex: 1 0 50%;
     background-color: #fff;
@@ -355,6 +345,34 @@ h2.sectionTitle .icon {
     min-width: 0;
   }
 }
+@media /* Tablets landscape and desktop */
+  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
+  screen and (min-width: 1024px) {
+  #taskContent {
+  }
+  #introGrid {
+    flex-direction: column;
+  }
+  #taskIntro {
+    background-color: #fff;
+    flex: 1 1 auto;
+  }
+  #gridContainer {
+    background-color: transparent;
+  }
+  #gridContainer #grid {
+    background-color: #fff;
+    flex: 1 1 auto;
+    padding: 2em;
+  }
+}
+@media /* Tablets and desktop */
+  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
+  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
+  screen and (min-width: 1024px) {
+
+
+}
 
 
 /*****************
@@ -364,6 +382,7 @@ h2.sectionTitle .icon {
   overflow-x: auto;
   max-width: 100%;
   padding: 2em 0px;
+  flex-grow: 1;
 }
 #testSelector {
     padding-left: 10px;
@@ -675,6 +694,16 @@ h2.sectionTitle .icon {
 #blocklyLibContent {
   width: 100%;
 }
+@media /* Tablets and desktop */
+  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
+  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
+  screen and (min-width: 1024px) {
+  #blocklyLibContent {
+    width: auto;
+    flex: 1 1 auto;
+    min-width: 0;
+  }
+}
 #blocklyDiv {
     width: 100%;
     height: 100%;
@@ -817,9 +846,9 @@ h2.sectionTitle .icon {
   but keep element as it is used to calculate other elements position in JS */
   #taskToolbar {
     visibility: hidden;
+    overflow: hidden;
     height: 0;
     flex: 0 0 0;
-    position: static;
   }
 }
 #taskToolbar::after {
