--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -723,19 +723,36 @@ h2.sectionTitle .icon {
   height: 30px;
   background-color: #fff;
 }
+
+@media /* Mobiles */
+  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px),
+  screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1023px) {
+    #editorBar {
+      display: flex;
+      justify-content: space-between;
+    }
+    #capacity {
+      flex-grow: 1;
+    }
+    #editorBar .displayHelpBtn {
+      display: none;
+    }
+    #editorBar #fullscreenButton {
+      border: 0;
+      background-color: transparent;
+      box-shadow: none;
+    }
+}
 #capacity {
-  display: inline;
   line-height: 30px;
-  padding-left: 10px;
+  color: #787878;
+  text-align: center;
 }
 .capacityRed {
   background-color: #E77471;
   color: black;
 }
 
-#fullscreenButton {
-  float: right;
-}
 .scaleDrawingControl {
   display: none;
 }
@@ -907,21 +924,22 @@ h2.sectionTitle .icon {
   border-left: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 1px 0px 0px 0px #000 inset;
 }
-#modeSelector #mode-editor.mode #displayHelpBtn {
+#modeSelector .displayHelpBtn {
   background-color: rgba(0,0,0,0.3);
   border-radius: 50%;
   padding: 6px 9px;
   font-size: 13px;
   margin-top: -4px;
   margin-bottom: -3px;
+  color: #fff;
+  border: 0;
 }
-#modeSelector #mode-editor.mode:not(.active) #displayHelpBtn {
+#modeSelector .mode:not(.active) .displayHelpBtn {
   display: none;
 }
-#modeSelector #mode-editor.mode #displayHelpBtn .fas {
+#modeSelector .displayHelpBtn .fas {
   font-size: 13px;
 }
-
 #modeSelector .mode .label {
   text-transform: uppercase;
   margin-left: 10px;
@@ -929,11 +947,6 @@ h2.sectionTitle .icon {
 }
 #modeSelector .mode:not(.active) .label {
   display: none;
-}
-#displayHelpBtn {
-  border: 0;
-  background-color: transparent;
-  color: #fff;
 }
 
 /************************
