--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -725,17 +725,19 @@ h2.sectionTitle .icon {
     width: 100%;
     height: 100%;
 }
-
-/* Editor Bar */
-#editorBar {
-  height: 30px;
-  background-color: #fff;
+#blocklyLibContent {
+  position: relative;
 }
 
-@media /* Mobiles */
-  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px),
-  screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1023px) {
+/* Editor Bar */
+#editorBar .buttons button {
+  cursor: pointer;
+}
+@media /* Portrait mobiles */
+  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px) {
     #editorBar {
+      height: 30px;
+      background-color: #fff;
       display: flex;
       justify-content: space-between;
     }
@@ -749,7 +751,47 @@ h2.sectionTitle .icon {
       border: 0;
       background-color: transparent;
       box-shadow: none;
+      line-height: 30px;
     }
+}
+@media /* landscape mobiles, tablets and desktop */
+  screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px),
+  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
+  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
+  screen and (min-width: 1024px) {
+  #editorBar {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    padding-top: 10px;
+    z-index: 1;
+    display: flex;
+    align-items: flex-start;
+  }
+  #capacity {
+    padding-right: 10px;
+  }
+  #editorBar #fullscreenButton,
+  #editorBar .displayHelpBtn {
+    position: relative;
+    display: block;
+    font-size: 14px;
+    padding: 8px 12px;
+    flex-grow: 0;
+    color: #fff;
+    background: #4a90e2;
+    border: 0;
+    box-shadow: none;
+    border-radius: 5px 0 0 5px;
+    outline: 0;
+  }
+  #editorBar #fullscreenButton {
+    margin-bottom: 10px;
+  }
+}
+  #editorBar .displayHelpBtn {
+    display: none;
+  }
 }
 #capacity {
   line-height: 30px;
