--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -719,6 +719,8 @@ h2.sectionTitle .icon {
     width: auto;
     flex: 1 1 auto;
     min-width: 0;
+    background: #fff;
+    padding-top: 10px;
   }
 }
 #blocklyDiv {
