--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -1098,17 +1098,65 @@ h2.sectionTitle .icon {
 }
 
 /************************
-  LONG INTRODUCTION
+  INTRODUCTION
 *************************/
+#taskIntro .shortIntroTitle {
+  display: none;
+}
+button.showLongIntro {
+  color: #fff;
+  background-color: #4a90e2;
+  border-radius: 50px;
+  width: 100%;
+  border: none;
+  box-shadow: none;
+  padding: 8px 15px;
+  position: relative;
+  cursor: pointer;
+  display: none;
+}
+button.showLongIntro .icon {
+  position: absolute;
+  left: 15px;
+  top: 10px;
+}
+@media screen and (min-width: 1024px) {
+  #taskIntro .longIntroTitle,
+  #taskIntro .long {
+    display: none;
+  }
+  #taskIntro .shortIntroTitle,
+  button.showLongIntro {
+    display: block;
+  }
+
+}
 #taskIntroLong {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+  background-color: #fff;
+  z-index: 2;
 }
 #taskIntroLong.displayIntroLong {
-  display: block;
+  display: block !important;
+}
+.panel-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 15px 15px 0;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+.panel-heading .exit {
+  cursor: pointer;
+  font-size: 18px;
+  color: #4a90e2;
+  border: 0;
+  background-color: transparent;
+  box-shadow: none;
 }
 
 /************************
