--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -56,7 +56,8 @@ img {
   color: #9b9b9b;
 }
 
-@media screen and (max-width:680px) and (orientation: portrait) {
+@media /* Portrait mobiles */
+  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px) {
   #tabsMenu {
     background-color: #fff;
     border-radius: 5px 5px 0 0;
