--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -108,9 +108,8 @@ body > * {
 }
 
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
   #editorMenu {
     width: 250px;
     right: -250px;
@@ -148,9 +147,8 @@ body > * {
   text-align: center;
 }
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
   #editorMenu .editorActions {
     height: auto;
   }
@@ -168,7 +166,8 @@ body > * {
 #editorMenu .editorActions div span.far {
   font-size: 32px;
 }
-@media screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px) { /* Landscape mobiles */
+@media /* Landscape mobiles */
+  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
   #editorMenu .editorActions {
     flex-direction: row;
     flex-wrap: wrap;
@@ -227,6 +226,7 @@ h2.sectionTitle .icon {
   justify-content: stretch;
   height: calc(100vh - 40px);
   width: 100vw;
+
 }
 #taskContent {
   flex: 2 0 0;
@@ -257,8 +257,8 @@ h2.sectionTitle .icon {
 }
 
 @media /* Mobiles */
-  screen and (orientation: portrait) and (max-width: 799px) and (max-height: 1023px),
-  screen and (orientation: landscape) and (max-height: 799px) and (max-width: 1023px) {
+  screen and (max-width: 767px) and (orientation: portrait),
+  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
   .mode-player #taskContent {
     flex-direction: column;
   }
@@ -284,7 +284,9 @@ h2.sectionTitle .icon {
   }
 }
 
-@media screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px) { /* Landscape mobiles */
+@media /* Landscape mobiles */
+  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
+
   #taskContent {
     background-color: #fff;
   }
@@ -325,7 +327,7 @@ h2.sectionTitle .icon {
 }
 
 @media /* Tablets portrait */
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 
   #taskContent {
     flex-direction: column;
@@ -360,10 +362,7 @@ h2.sectionTitle .icon {
   }
 }
 @media /* Tablets landscape and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (min-width: 1024px) {
-  #taskContent {
-  }
+  screen and (min-width: 855px) and (orientation: landscape) {
   #introGrid {
     flex-direction: column;
   }
@@ -488,9 +487,8 @@ h2.sectionTitle .icon {
   color: #ababac;
 }
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
   #testSelector .tabs .testTab {
     line-height: 36px;
   }
@@ -636,58 +634,60 @@ h2.sectionTitle .icon {
   background: rgba(0,0,0,0.3);
 }
 
+#introGrid .speedControls {
+  justify-content: space-around;
+  padding: 10px;
+}
+#introGrid .playerControls,
+#introGrid .speedSlider {
+  display: inline-flex;
+  justify-content: space-around;
+  background-color: transparent;
+  border-radius: 0;
+  box-shadow: none;
+  width: 100%;
+  margin: 0;
+}
+#introGrid .playerControls .icon {
+  margin-right: 5px;
+}
+#introGrid .playerControls .icon span {
+  padding: 0;
+  border-radius: 50%;
+  line-height: 30px;
+  width: 30px;
+  text-align: center;
+}
+#introGrid .playerControls .icon:not(.playPause) span {
+  color: #fff;
+  background-color: #4a90e2;
+  font-size: 14px;
+}
+#introGrid .playerControls .icon.playPause span {
+  color: #4a90e2;
+  background-color: #fff;
+  font-size: 40px;
+  width: 40px;
+  vertical-align: middle;
+}
+#introGrid .speedSlider {
+  background-color: rgba(0,0,0,0.10);
+  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.10) inset ;
+  border-radius: 5px;
+  font-size: 18px;
+  color: #4a4a4a;
+}
+
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
   #introGrid .speedControls {
     display: flex;
-    justify-content: space-around;
-    padding: 10px;
-  }
-  #introGrid .playerControls,
-  #introGrid .speedSlider {
-    display: inline-flex;
-    justify-content: space-around;
-    background-color: transparent;
-    border-radius: 0;
-    box-shadow: none;
-    width: 100%;
-    margin: 0;
-  }
-  #introGrid .playerControls .icon {
-    margin-right: 5px;
-  }
-  #introGrid .playerControls .icon span {
-    padding: 0;
-    border-radius: 50%;
-    line-height: 30px;
-    width: 30px;
-    text-align: center;
-  }
-  #introGrid .playerControls .icon:not(.playPause) span {
-    color: #fff;
-    background-color: #4a90e2;
-    font-size: 14px;
-  }
-  #introGrid .playerControls .icon.playPause span {
-    color: #4a90e2;
-    background-color: #fff;
-    font-size: 40px;
-    width: 40px;
-    vertical-align: middle;
-  }
-  #introGrid .speedSlider {
-    background-color: rgba(0,0,0,0.10);
-    box-shadow: 1px 1px 0 0 rgba(0,0,0,0.10) inset ;
-    border-radius: 5px;
-    font-size: 18px;
-    color: #4a4a4a;
   }
 }
 @media /* Tablets portrait */
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px) {
-      .speedControls {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+  .speedControls {
     display: flex;
     justify-content: space-around;
     padding: 0 10px;
@@ -699,17 +699,16 @@ h2.sectionTitle .icon {
 *****************/
 /* Hide elements on editor fullscreen */
 @media /* Tablets and desktop */
-  screen and (display-mode: fullscreen) and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (display-mode: fullscreen) and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (display-mode: fullscreen) and (min-width: 1024px) {
+  screen and (display-mode: fullscreen) and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (display-mode: fullscreen) and (min-width: 960px) and (orientation: landscape) {
   #introGrid,
   #taskToolbar {
     display: none;
   }
 }
 @media /* Mobiles */
-  screen and (display-mode: fullscreen) and (orientation: portrait) and (max-width: 799px) and (max-height: 1023px),
-  screen and (display-mode: fullscreen) and (orientation: landscape) and (max-height: 799px) and (max-width: 1023px) {
+  screen and (display-mode: fullscreen) and (max-width: 600px) and (orientation: portrait),
+  screen and (display-mode: fullscreen) and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
   #miniPlatformHeader,
   #tabsContainer,
   #introGrid,
@@ -724,9 +723,8 @@ h2.sectionTitle .icon {
   width: 100%;
 }
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
   #blocklyLibContent {
     width: auto;
     flex: 1 1 auto;
@@ -751,7 +749,7 @@ h2.sectionTitle .icon {
   min-width: 12px;
 }
 @media /* Portrait mobiles */
-  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px) {
+  screen and (max-width: 767px) and (orientation: portrait) {
     #editorBar {
       height: 30px;
       background-color: #fff;
@@ -772,10 +770,9 @@ h2.sectionTitle .icon {
     }
 }
 @media /* landscape mobiles, tablets and desktop */
-  screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px),
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape),
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
   #editorBar {
     position: absolute;
     top: 10px;
@@ -806,7 +803,8 @@ h2.sectionTitle .icon {
     margin-bottom: 10px;
   }
 }
-@media screen and (orientation: landscape) and (max-height: 599px) and (max-width: 1024px) { /* Landscape mobiles */
+@media /* Landscape mobiles */
+  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
   #editorBar .displayHelpBtn {
     display: none;
   }
@@ -933,9 +931,8 @@ h2.sectionTitle .icon {
   position: relative;
 }
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 855px) and (orientation: landscape) {
 /* Hide task toolbar for tablets and desktop,
   but keep element as it is used to calculate other elements position in JS */
   #taskToolbar {
