--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -57,7 +57,7 @@ img {
 }
 
 @media /* Portrait mobiles */
-  screen and (orientation: portrait) and (max-width: 599px) and (max-height: 1023px) {
+  screen and (max-width: 600px) and (orientation: portrait) {
   #tabsMenu {
     background-color: #fff;
     border-radius: 5px 5px 0 0;
@@ -116,7 +116,9 @@ img {
     display: none;
   }
 }
-@media screen and (min-width: 480px) {
+@media /* all but portrait mobiles */
+    screen and (min-width: 480px) and (orientation: landscape),
+    screen and (min-width: 601px) and (orientation: portrait) {
   #tabsMenu a {
     padding: 10px 0;
   }
@@ -194,9 +196,8 @@ img {
   display: none;
 }
 @media /* Tablets and desktop */
-  screen and (orientation: landscape) and (min-width: 800px) and (min-height: 600px),
-  screen and (orientation: portrait) and (min-width: 600px) and (min-height: 800px),
-  screen and (min-width: 1024px) {
+  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
+  screen and (min-width: 960px) and (orientation: landscape) {
   #popupMessage .message {
     font-size: 14px;
   }
