--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -224,7 +224,7 @@ h2.sectionTitle .icon {
   display: flex;
   flex-direction: column;
   justify-content: stretch;
-  height: calc(100vh - 40px);
+  height: 100vh;
   width: 100vw;
 
 }
