--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -244,7 +244,7 @@ h2.sectionTitle .icon {
 }
 #gridContainer {
   background-color: #fff;
-  flex: 1 1 100%;
+  flex: 1 0 50%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -353,13 +353,13 @@ h2.sectionTitle .icon {
     box-shadow: 0 1px 0 0px #ccc inset;
   }
   #taskIntro {
-    flex: 1 0 50%;
+    flex: 0 1 auto;
     background-color: #fff;
-    overflow: visible;
+    overflow: scroll;
     padding-bottom: 50px;
   }
   #gridContainer {
-    flex: 1 1 50%;
+    flex: 1 0 auto;
     min-width: 0;
   }
 }
@@ -371,9 +371,11 @@ h2.sectionTitle .icon {
   #taskIntro {
     background-color: #fff;
     flex: 1 0 auto;
+    max-height: 33%;
   }
   #gridContainer {
     background-color: transparent;
+    flex: 0 1 100%;
   }
   #gridContainer #grid {
     background-color: #fff;
@@ -390,6 +392,7 @@ h2.sectionTitle .icon {
     flex-grow: 1;
     z-index: 2;
     padding: 6px;
+    text-align: center;
 }
 #testSelector {
     padding-left: 10px;
